Fixed the todolist scrolling bug. Just needed the container for the todolist to also have overflow-y: auto;

--- a/src/todolist/TodoList.css
+++ b/src/todolist/TodoList.css
@@ -6,6 +6,7 @@
   height: 100%;
   width: 100%;
   padding: 0rem 1rem;
+  overflow: auto;
 }
 
 /* ------------------------- TODOLIST ------------------------- */
